added LogIn and SinUp form

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --color-base-200: #11161d;
   --color-base-300: #18222c;
   --color-base-content: #e0e1dd;
+  --color-primary: #98c1d9;
 }
 
 .btn-primary {
